# SpeechGPT

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  setup.py  tests.py
package/src/: __init__.py  voiceinterface.py
speechgpt/: __init__.py  askgpt.py  text_to_speech.py  voiceinterface.py
